--- a/viewer.html
+++ b/viewer.html
@@ -25,9 +25,9 @@
         </div>
         <div id="dev">
             <label>develop by</label>
-            <a href="https://twitter.com/mahiro_m4a" target="_blank">
+            <a href="https://twitter.com/mahiro7429" target="_blank">
                 <img src="https://www.google.com/s2/favicons?sz=20&domain=twitter.com">
-                <label>@mahiro_m4a</label>
+                <label>@mahiro7429</label>
             </a>
         </div>
     </div>
